<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidGC2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_trigcircuitscalc">Calcul circuits</string>
    <string name="action_supervision">Supervision</string>
    <string name="action_circuits">Circuits</string>
    <string name="action_dechet1">Déchet tout-venant</string>
    <string name="action_dechet2">Déchet recyclable</string>
    <string name="action_dechet3">Déchet verre</string>
    <string name="title_activity_portail_container">portail_container</string>
    <string name="title_activity_portail_camion">portail_camion</string>
    <string name="title_activity_conteneur_liste">conteneur_liste</string>
    <string name="title_activity_camions_liste">camions_liste</string>

</resources>
