<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MapsActivity">
    <item android:id="@+id/action_settings" android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="999" app:showAsAction="never" />
    <item android:id="@+id/action_trigcircuitscalc" android:icon="@drawable/ic_action_time"
        android:title="@string/action_trigcircuitscalc"
        android:orderInCategory="050" app:showAsAction="always" />
    <item android:id="@+id/action_supervision" android:icon="@drawable/ic_action_dock"
        android:title="@string/action_supervision"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_circuits" android:icon="@drawable/ic_action_share"
        android:title="@string/action_circuits"
        android:orderInCategory="200" app:showAsAction="always" />
    <item android:id="@+id/action_dechet1" android:icon="@drawable/ic_action_discard"
        android:title="@string/action_dechet1" android:checkable="true" android:checked="true"
        android:orderInCategory="501" app:showAsAction="never" />
    <item android:id="@+id/action_dechet2" android:icon="@drawable/ic_action_discard"
        android:title="@string/action_dechet2" android:checkable="true" android:checked="true"
        android:orderInCategory="502" app:showAsAction="never" />
    <item android:id="@+id/action_dechet3" android:icon="@drawable/ic_action_discard"
        android:title="@string/action_dechet3" android:checkable="true" android:checked="true"
        android:orderInCategory="503" app:showAsAction="never" />
</menu>
